Tue Apr 15 21:41:19 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/InfoRepo/DCPSInfo_i.cpp:

          Additional logging prior to calling find_subscription_reference()
          and find_publication_reference().

        * tests/DCPS/PersistentDurability/run_test.pl:

          Raise log level.

Tue Apr 15 20:57:02 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Priority/DataReaderListener.cpp:

          Added more diagnostics.

        * tests/DCPS/ReaderDataLifecycle/main.cpp:

          Added class to handle cleanup when exiting and added
          diagnostics messages.

        * tests/DCPS/ReaderDataLifecycle/run_test.pl:

          Added timestamps to track when data is disposed.

Tue Apr 15 15:40:10 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/WriteDataContainer.cpp:

          Fixed race condition where the element has been marked with
          space available after the condition has timedout, but before
          it has re-acquired the lock.

Tue Apr 15 14:24:33 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/WriteDataContainer.cpp:

          Removed logging of lock recursion level since it isn't
          implemented on some platforms.

Mon Apr 14 19:20:55 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Priority/publisher_main.cpp:

          Changed check of scheduler to just ensure scheduler was set
          since publisher would need to be run as super user on linux
          platforms to select the round robin scheduler.

Mon Apr 14 19:20:05 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/TransientLocalTest/publisher.cpp:
        * tests/DCPS/TransientLocalTest/subscriber.cpp:

          Create different topic name to diagnose out-of-order issues.

Mon Apr 14 19:17:26 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/RequestedDeadlineWatchdog.cpp:

          Additional Watchdog logging at debug level 6 and up
